Fix imported/w3c/web-platform-tests/css/css-grid/abspos/grid-abspos-staticpos-align-self-rtl-001.html https://bugs.webkit.org/show_bug.cgi?id=245879

Reviewed by Antti Koivisto.

RenderStyle::maringStart() returns the the logical margin value based on the box's direction and not the direction the box is in (ie. the margin start value of a box with "direction: rtl" inside an LTR containing block is the margin-left value and not the margin-right).

This patch removes the margin computation in FloatingContext. Incoming float boxes (and non-float float avoiders) should already have their margin values computed.

* LayoutTests/TestExpectations: LFC should pre-compute margin values. Skip them for now.
* LayoutTests/fast/block/float/rtl-float-box-with-margin-expected.html: Added.
* LayoutTests/fast/block/float/rtl-float-box-with-margin.html: Added.
* Source/WebCore/layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::positionForFloat const):
(WebCore::Layout::FloatingContext::positionForNonFloatingFloatAvoider const):
(WebCore::Layout::computedHorizontalMargin): Deleted.
* Source/WebCore/layout/floats/FloatingContext.h:
* Source/WebCore/layout/formattingContexts/block/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::computePositionToAvoidFloats):

Canonical link: https://commits.webkit.org/255033@main